--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <nav class="navigation">
 <ul class="navlinks">
 
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="aboutme.html">About</a></li>
     <li><a href="">Portfolio</a></li>
     <li><a href="">Blogs</a></li>   
     <li><a href="">Contact Us</a></li>
@@ -30,9 +30,9 @@
     <p class="name">My name is,</p>
     <p class="name1">MUHAYIMANA Ambroise</p>
     <p class="name2">I'm software Developer</p>
-    <p class="text">I'm specializing in building Static and Dynammic Website By Using modern Language</p>
+    <p class="text">I'm specializing in building Static and Dynammic Website By Using modern Language
  
-    <p class="text">to know more about </p>
+    to know more about </p>
      <p class="about">To Know more about me downloads my resume</p>
     
  <div class="icon"><p class="resume">Resume</p> <i class="fa fa-cloud-download" aria-hidden="true"></i></div>
@@ -41,8 +41,16 @@
 </div>
 <img src="ambroise.jpeg" alt="" srcset="" class="image">
 </section>
-<section class="section1"><div class="readmore"><a href="" class="readmore1"> VIEW MORE ABOUT ME</a></div></section>
+<section class="section1"><div class="readmore"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div></section>
 <section class="section1"><div class="readmore2">
+
+    <section>
+
+
+
+
+        
+    </section> 
 <span class="socialmedia1"><label class="socialmedia">I'M AVALABLE ON THE FOLLOWING SOCIAL MEDIA</label>
 </span>
 <div class="socialmedialine"></div>
