--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="">About</a></li>
     <li><a href="">Portfolio</a></li>
-    <li><a href="">Blogs</a></li>   
+    <li><a href="blog.html">Blogs</a></li>   
     <li><a href="">Contact Us</a></li>
 
 </ul>
