--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
 <ul class="navlinks">
 
     <li><a href="index.html">Home</a></li>
-    <li><a href="">About</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="blog.html">Blogs</a></li>   
-    <li><a href="">Contact Us</a></li>
+    <li><a href="aboutme.html">About</a></li>
+    <li><a href="project.html">Portfolio</a></li>
+    <li><a href="portfolio.html">Blogs</a></li>   
+    <li><a href="contact.html">Contact Us</a></li>
 
 </ul>
 </nav>
