--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
 
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="blog.html">Blogs</a></li>   
+    <li><a href="project.html">Portfolio</a></li>
+    <li><a href="portfolio.html">Blogs</a></li>   
     <li><a href="contact.html">Contact Us</a></li>
 
 </ul>
@@ -28,48 +28,39 @@
 <h2 class="title1">Dashboard</h2>
 <div class="newpost"><a href="" class="a">NEW POST</a></div>
 <div class="input"><input type="text" placeholder="search"><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></div>
-<div class="dashboard">
+<div class="t">
     <p class="user">USER</p>
-    <div class="request">
-       <a href="" class="requests"> Request Services</a>
-    </div>
-    <p class="user1">ADMIN</p>
-    <p class="user3">Dashboard</p>
-  
+    <p class="admin">ADMIN DASHBOARD</p>
+<div class="d"><a href="contact.html" class="a">Rquest Service</a></div>
+<div class="e"><a href="addblogs.css" class="f">Add Blogs</a></div>
+<div class="m"><a href="editblog.html" class="n">Edit Blogs</a></div>
+<div class="p"><a href="viewblogs.html" class="s">Request Service</a></div>
+
 </div>
-<div class="add">
-    <a href="" class="adds"> ADD BLOGS</a>
- </div>
- <div class="edit">
-    <a href="" class="edits"> EDIT BLOGS</a>
- </div>
- <div class="view">
-    <a href="viewblogs.html" class="views">VIEW BLOGS</a>
- </div>
 
-
- <div class="readmorep"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div>
+ &nbsp;&nbsp;&nbsp;&nbsp;
+ <!-- <div class="readmorep"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div> -->
  <div class="photo">     <i class="fa-brands fa-node"></i></i> <i class="fa-brands fa-php"></i><i class="fa-brands fa-laravel"></i><img src="backend.jpg" alt="" srcset="">
    
 <div class="explain1"><p class="explain">Html5 semantic markup is available</p></div>
 </div>
-<div class="readmoren"><a href="viewblogs.html" class="readmore1"> VIEW MORE BLOGS</a></div>
+<div class="readmoren"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div>
 <div class="photo1"></i><i class="fa-brands fa-html5"></i></i><i class="fa-solid fa-code"></i> <i class="fa-brands fa-css3"></i><img src="htmlimage.webp" alt="" srcset="">
       <div class="explaina"><p class="explainx">Html5 semantic markup is available</p> </div>
     </div> 
-     
+        <div class="readmorem"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div> 
     <div class="readmorem"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div>
 <div class="photo2"><i class="fa-brands fa-node"></i></i> 
     <i class="fa-brands fa-react"></i>  <i class="fa-brands fa-node-js"></i><i class="fa-brands fa-angular"></i><img src="front_END.jpg" alt="" srcset="">
      <div class="explainb"><p class="explainy">Html5 semantic markup is available</p></div>
     </div> 
-    <div class="readmorep"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div>
+    <!-- <div class="readmorep"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div> -->
     <div class="readmore"><a href="aboutme.html" class="readmore1"> VIEW MORE ABOUT ME</a></div>
 <br>
 
-</section><p class="readmorek"> ADD YOUR COMMENT HERE!!!</p>
-<section>
-    <textarea name="" id="editor" cols="61" rows="10"></textarea>
+<p class="readmorek"> ADD YOUR COMMENT HERE!!!</p>
+
+    <textarea name="" id="editor" cols="61" rows="10" placeholder="ADD COMMENT HERE"></textarea>
 </section>
 <button class="comment"><p class="send">Send message</p></button>
 </body>
