--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About</a></li>
-    <li><a href="portfoli.html">Portfolio</a></li>
-    <li><a href="blog.html">Blogs</a></li>   
-    <li><a href="contact.html">Contact Us</a></li>
+    <li><a href="project.html">Portfolio</a></li>
+    <li><a href="portfolio.html">Blogs</a></li>   
+    <li><a href="signup.html">Register</a></li>  
+    <li><a href="signin.html">Signin</a></li>  
+    <li><a href="contact.html">Contact </a></li>
 
 </ul>
 </nav>
