--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     <p class="user">USER</p>
     <p class="admin">ADMIN DASHBOARD</p>
 <div class="d"><a href="contact.html" class="a">Rquest Service</a></div>
-<div class="e"><a href="addblogs.css" class="f">Add Blogs</a></div>
+<div class="e"><a href="addblogs.html" class="f">Add Blogs</a></div>
 <div class="m"><a href="editblog.html" class="n">Edit Blogs</a></div>
 <div class="p"><a href="viewblogs.html" class="s">Request Service</a></div>
 
