--- a/project.html
+++ b/project.html
@@ -16,7 +16,7 @@
 <ul class="navlinks">
 
     <li><a href="index.html">Home</a></li>
-    <li><a href="aboutme.html">About</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="project.html">Portfolio</a></li>
     <li><a href="portfolio.html">Blogs</a></li>   
     <li><a href="contact.html">Contact Us</a></li>
@@ -31,7 +31,9 @@
 <br>
 <p class="title1">Online Hotel Reservation</p>
 <div class="projects1"><img src="hotel online reservation.jpg" alt="">
-
+    hotel online reservation.jpg
+    employe management system.jpg
+    android.jpg
 <p class="discription">Hotel online reservation helps us to delively rooms
   
     to  someones which visting somewhere and also enable to make celeblation  day of party and other  
