--- a/viewblogs.html
+++ b/viewblogs.html
@@ -11,16 +11,13 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-
 <nav class="navigation">
 <ul class="navlinks">
-
     <li><a href="index.html">Home</a></li>
-    <li><a href="aboutme.html">About</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Blogs</a></li>   
-    <li><a href="">Contact Us</a></li>
-
+    <li><a href="about.html">About</a></li>
+    <li><a href="project.html">Portfolio</a></li>
+    <li><a href="portfolio.html">Blogs</a></li>   
+    <li><a href="contact.html">Contact Us</a></li>
 </ul>
 </nav>
 <section>
