--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,12 @@
            </label>
                 <nav class="nav">
                     <ul>
-                        <li><a href="index.html" class="active">home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="projects.html">Portfolio</a></li>
-                        <li><a href="register.html">Login&Regiter</a></li>
-                        <li><a href="portfolio.html">Blogs</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="index.html" class="active">home</a>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="projects.html">Portfolio</a></li>
+                            <li><a href="register.html">Login&Regiter</a></li>
+                            <li><a href="portfolio.html">Blogs</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
